Refactor US011: Update ItemRepo and tests #185